[gd_scene load_steps=21 format=3 uid="uid://kib21yto7yik"]

[ext_resource type="Script" path="res://player/player.gd" id="1_es81c"]
[ext_resource type="Texture2D" uid="uid://r7wqniih52i7" path="res://assets/art/characters/player.png" id="2_t5lp7"]
[ext_resource type="Texture2D" uid="uid://bvhspqwqd3egf" path="res://assets/art/hats/no_hat.png" id="3_32cti"]
[ext_resource type="Script" path="res://characters/hit_box.gd" id="3_lkrl1"]
[ext_resource type="Script" path="res://characters/hurt_box.gd" id="4_f2q0e"]
[ext_resource type="Texture2D" uid="uid://grhjyrqdkxvk" path="res://assets/art/characters/interact_icon.png" id="4_snnva"]
[ext_resource type="Texture2D" uid="uid://fru5a7c7rjed" path="res://assets/art/characters/blind_mode.png" id="5_wet6a"]

[sub_resource type="Animation" id="Animation_sud7h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_r8c13"]
resource_name = "animate"
length = 1.6
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_aev7v"]
_data = {
"RESET": SubResource("Animation_sud7h"),
"animate": SubResource("Animation_r8c13")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qmdhs"]
size = Vector2(4, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ssent"]
radius = 8.0
height = 16.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ykc2y"]
size = Vector2(6, 12)

[sub_resource type="Animation" id="Animation_wxi8o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite/hat:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -1)]
}

[sub_resource type="Animation" id="Animation_levvj"]
resource_name = "get_up"
length = 4.3
step = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2, 1.8, 2.4, 3, 3.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2.4, 3, 3.6),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"create_get_up_sound"
}, {
"args": [],
"method": &"create_get_up_sound"
}, {
"args": [],
"method": &"create_get_up_sound"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(4.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"change_to_move_state"
}]
}

[sub_resource type="Animation" id="Animation_tkg82"]
resource_name = "idle"
length = 1.8
loop_mode = 1
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite/hat:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, -1), Vector2(0, 0), Vector2(0, -1), Vector2(0, 0), Vector2(0, -1), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_0bejx"]
resource_name = "jump"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [18, 19]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite/hat:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_rmpc6"]
resource_name = "run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite/hat:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, -1), Vector2(0, -2), Vector2(0, -2), Vector2(0, -1), Vector2(0, -2), Vector2(0, -2)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"create_walk_sound"
}, {
"args": [],
"method": &"create_walk_sound"
}]
}

[sub_resource type="Animation" id="Animation_vnt8b"]
resource_name = "wall_slide"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [24, 25]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite/hat:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(0, -1), Vector2(0, -1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uhsh5"]
_data = {
"RESET": SubResource("Animation_wxi8o"),
"get_up": SubResource("Animation_levvj"),
"idle": SubResource("Animation_tkg82"),
"jump": SubResource("Animation_0bejx"),
"run": SubResource("Animation_rmpc6"),
"wall_slide": SubResource("Animation_vnt8b")
}

[node name="player" type="CharacterBody2D" groups=["player"]]
z_index = 1
collision_layer = 2
collision_mask = 161
floor_stop_on_slope = false
floor_snap_length = 2.0
safe_margin = 0.2
script = ExtResource("1_es81c")

[node name="sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_t5lp7")
offset = Vector2(0, -8)
hframes = 6
vframes = 8
frame = 6

[node name="hat" type="Sprite2D" parent="sprite"]
position = Vector2(0, -1)
texture = ExtResource("3_32cti")

[node name="interact_icon" type="Sprite2D" parent="."]
visible = false
z_index = 10
position = Vector2(0, -24)
texture = ExtResource("4_snnva")
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="interact_icon"]
libraries = {
"": SubResource("AnimationLibrary_aev7v")
}
autoplay = "animate"

[node name="blind_obscure" type="Sprite2D" parent="."]
visible = false
z_index = 1000
position = Vector2(0, -8)
texture = ExtResource("5_wet6a")

[node name="collision" type="CollisionPolygon2D" parent="."]
position = Vector2(0, -6)
polygon = PackedVector2Array(3, 6, 3, 3, 3, -6, -3, -6, -3, 3, -3, 6)

[node name="jump_collision" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2(0, -6)
polygon = PackedVector2Array(3, 6, 3, 3, 3, -5, -3, -3, -3, 3, -3, 6)

[node name="start_collision" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2(0, -6)
polygon = PackedVector2Array(1, 6, 1, 5, -1, 5, -1, 6)

[node name="hit_box" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 16
script = ExtResource("3_lkrl1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_box"]
modulate = Color(0.980392, 0, 0.27451, 1)
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_qmdhs")

[node name="hurt_box" type="Area2D" parent="." groups=["player_hurt_box"]]
visible = false
collision_layer = 4
collision_mask = 256
script = ExtResource("4_f2q0e")

[node name="collision2" type="CollisionPolygon2D" parent="hurt_box"]
modulate = Color(0.898039, 0.847059, 0, 1)
position = Vector2(0, -6)
polygon = PackedVector2Array(1, 5, 2, 3, 2, -4, -2, -3, -2, 3, -1, 5)

[node name="interaction_detection" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="interaction_detection"]
position = Vector2(0, -8)
shape = SubResource("CapsuleShape2D_ssent")

[node name="air_recovery_detection" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="air_recovery_detection"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_ykc2y")

[node name="camera_follow" type="RemoteTransform2D" parent="."]
position = Vector2(0, -15)

[node name="coyote_jump_timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="coyote_wall_timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="jump_timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="jump_buffer_timer" type="Timer" parent="."]
wait_time = 0.02
one_shot = true

[node name="b_hop_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="drop_timer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uhsh5")
}
autoplay = "idle"

[connection signal="area_entered" from="hit_box" to="." method="_on_hit_box_area_entered"]
[connection signal="area_entered" from="hit_box" to="hit_box" method="_on_area_entered"]
[connection signal="body_entered" from="hurt_box" to="hurt_box" method="_on_body_entered"]
[connection signal="hit" from="hurt_box" to="." method="_on_hurt_box_hit"]
[connection signal="area_entered" from="interaction_detection" to="." method="_on_interaction_detection_area_entered"]
[connection signal="area_exited" from="interaction_detection" to="." method="_on_interaction_detection_area_exited"]
[connection signal="area_entered" from="air_recovery_detection" to="." method="_on_air_recovery_detection_area_entered"]
[connection signal="timeout" from="jump_timer" to="." method="_on_jump_timer_timeout"]
[connection signal="timeout" from="jump_buffer_timer" to="." method="_on_jump_buffer_timer_timeout"]
[connection signal="timeout" from="drop_timer" to="." method="_on_drop_timer_timeout"]
